--- a/index.html
+++ b/index.html
@@ -190,15 +190,7 @@
                     {/* 結果列表 */}
                     {searchResult && (
                         <div className="space-y-10">
-                            <div className="flex items-center space-x-4 ml-4">
-                                <div className="w-14 h-14 bg-indigo-600 rounded-2xl flex items-center justify-center text-white shadow-lg">
-                                    <User size={28} />
-                                </div>
-                                <div>
-                                    <h2 className="text-3xl font-black text-slate-800 tracking-tighter">{queryName} 的訂單</h2>
-                                </div>
-                            </div>
-                            
+                            {/* 已刪除原有的姓名標題區塊，直接顯示訂單卡片 */}
                             {searchResult.map((group, index) => (
                                 <div key={index} className="order-card bg-white rounded-[3rem] shadow-2xl shadow-slate-200/40 border border-slate-100 overflow-hidden animate-in" style={{animationDelay: `${index * 0.1}s`}}>
                                     {/* 頂部標題列 */}
@@ -207,7 +199,7 @@
                                             <span className={`text-xs font-black px-4 py-2 rounded-xl uppercase tracking-wider shadow-sm ${group.type?.includes('預購') ? 'bg-indigo-600 text-white' : 'bg-rose-500 text-white'}`}>
                                                 {group.type}
                                             </span>
-                                            <h3 className="font-black text-slate-800 text-xl tracking-tight">{group.groupName}</h3>
+                                            <h3 className="font-bold text-slate-800 text-base tracking-tight">{group.groupName}</h3>
                                         </div>
                                         <PaymentBadge status={group.paymentStatus} />
                                     </div>
@@ -227,19 +219,19 @@
                                             <table className="w-full text-base">
                                                 <thead>
                                                     <tr className="text-slate-400 border-b border-slate-100">
-                                                        <th className="text-left py-4 font-black uppercase text-xs tracking-[0.1em]">品項名稱</th>
-                                                        <th className="text-center py-4 font-black uppercase text-xs tracking-[0.1em] px-4">數量</th>
-                                                        <th className="text-right py-4 font-black uppercase text-xs tracking-[0.1em] px-4">單價</th>
-                                                        <th className="text-right py-4 font-black uppercase text-xs tracking-[0.1em] pl-4">合計</th>
+                                                        <th className="text-left py-4 font-black uppercase text-[10px] tracking-[0.1em]">品項內容</th>
+                                                        <th className="text-center py-4 font-black uppercase text-[10px] tracking-[0.1em] px-4">數量</th>
+                                                        <th className="text-right py-4 font-black uppercase text-[10px] tracking-[0.1em] px-4">單價</th>
+                                                        <th className="text-right py-4 font-black uppercase text-[10px] tracking-[0.1em] pl-4">合計</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody className="divide-y divide-slate-100">
                                                     {group.items.map((item, i) => (
                                                         <tr key={i} className="group transition-colors">
-                                                            <td className="py-5 text-slate-700 font-bold leading-relaxed max-w-[200px] text-base">{item.name}</td>
-                                                            <td className="py-5 text-center font-mono text-slate-500 font-bold text-base">×{item.qty}</td>
-                                                            <td className="py-5 text-right font-mono text-slate-500 font-bold text-base">${item.price}</td>
-                                                            <td className="py-5 text-right font-mono text-slate-900 font-black tracking-tighter text-lg">${item.total}</td>
+                                                            <td className="py-4 text-slate-700 font-bold leading-relaxed max-w-[200px] text-[13px]">{item.name}</td>
+                                                            <td className="py-4 text-center font-mono text-slate-500 font-bold text-sm">×{item.qty}</td>
+                                                            <td className="py-4 text-right font-mono text-slate-500 font-bold text-sm">${item.price}</td>
+                                                            <td className="py-4 text-right font-mono text-slate-900 font-black tracking-tighter text-base">${item.total}</td>
                                                         </tr>
                                                     ))}
                                                 </tbody>
@@ -250,8 +242,8 @@
                                         <div className="flex justify-between items-end pt-8 border-t-2 border-slate-100">
                                             <div>
                                                 <span className="text-sm text-slate-400 font-black uppercase tracking-[0.1em] block mb-1.5 ml-1">合計</span>
-                                                <div className="text-3xl font-black text-slate-900 tracking-tighter flex items-center">
-                                                    <span className="text-base mt-1 mr-1 text-slate-300 font-bold">$</span>
+                                                <div className="text-xl font-black text-slate-900 tracking-tighter flex items-center">
+                                                    <span className="text-sm mt-1 mr-1 text-slate-300 font-bold">$</span>
                                                     {group.grandTotal}
                                                 </div>
                                             </div>
